# main.py
@@ -1,26 +1,21 @@
 from flask import *
-#from flask_mysql_connector import *
-
 from waitress import serve
 from sqlalchemy import *
-
-from pymysql import *
 from models import *
-from sqlalchemy.orm import relationship
-from datetime import datetime
-import bcrypt as bcrypt
+from Base import engine
 from flask_marshmallow import Marshmallow
 from datetime import datetime
-from sqlalchemy import Column, ForeignKey, Integer, String, create_engine
 from sqlalchemy.orm import sessionmaker
 from flask_swagger_ui import *
-from flask_httpauth import HTTPBasicAuth
 from sqlalchemy import and_
+
 
 app = Flask(__name__)
 
 #SQLalchemy
-engine = create_engine("mysql+pymysql://root:mira0369B@localhost:3306/mydb02", echo=True)
+# Base = declarative_base()
+# engine = create_engine("mysql+pymysql://root:mira0369B@localhost:3306/mydb02", echo=True)
+# Base.metadata.create_all(engine)
 session = sessionmaker(bind=engine)
 s = session()
 
@@ -30,7 +25,6 @@ ma = Marshmallow(app)
 #SwaggerUrL
 SWAGGER_URL = '/swagger'
 API_URL = '/static/swagger.json'
-#API_URL = '/docs/swagger.json'
 SWAGGER_BLUEPRINT = get_swaggerui_blueprint(
     SWAGGER_URL,
     API_URL,
@@ -120,7 +114,7 @@ def getUserById(id):
     return user_schema.jsonify(user1)
 
 @app.route("/user/deleteUser/<int:id>", methods=["DELETE"])
-def getUserById(id):
+def deleteUser(id):
     user1 = s.query(user).filter(user.id == id).one()
     s.delete(user1)
     s.commit()
@@ -171,10 +165,85 @@ def createRental():
                         user_id = user_id,
                         car_idcar=car_idcar)
 
+        exists = s.query(rental).filter(and_(rental.startTime >=
+                                             datetime.strptime(startTime, "%Y-%m-%d %H:%M"),
+                                             rental.endTime <= datetime.strptime(endTime, "%Y-%m-%d %H:%M"),
+                                             rental.car_idcar == car_idcar)).first() is not None
+
+        dif = datetime.strptime(endTime, "%Y-%m-%d %H:%M") - datetime.strptime(startTime, "%Y-%m-%d %H:%M")
+
+        if exists:
+            return jsonify({"Error": "Car is already booked."})
+
+        if datetime.strptime(startTime, "%Y-%m-%d %H:%M") >= datetime.strptime(endTime, "%Y-%m-%d %H:%M"):
+            return jsonify({"Error": "Invalid date input"})
+
         s.add(new_rental)
         s.commit()
-        return user_schema.jsonify(new_rental)
+        return rental_schema.jsonify(new_rental)
+    except Exception as e:
+        return jsonify({"Error": "Invalid Request, please try again."})
+
+@app.route("/rental/deleteRental/<int:idrental>", methods=["DELETE"])
+def deleteRental(idrental):
+    rental1 = s.query(rental).filter(rental.idrental == idrental).one()
+    s.delete(rental1)
+    s.commit()
+    return jsonify({"Success":"Rental deleted."})
+
+@app.route("/rental/editingRental/<int:idrental>", methods=["PUT"])
+def updateRentalById(idrental):
+    rental1 = s.query(rental).filter(rental.idrental == idrental).one()
+    try:
+        startTime = request.json['startTime']
+        endTime = request.json['endTime']
+        price = request.json['price']
+        user_id = request.json['user_id']
+        car_idcar = request.json['car_idcar']
+
+        rental1.startTime=startTime
+        rental1.endTime=endTime
+        rental1.price =price
+        rental1.user_id=user_id
+        rental1.car_idcar=car_idcar
+
+        s.commit()
+    except Exception as e:
+        return jsonify({"Error": "Invalid Request, please try again."})
+
+    return rental_schema.jsonify(rental1)
+
+@app.route("/rental/<startTime>/<endTime>/<int:idrental>", methods=["GET"])
+def getRental():
+    try:
+        startTime = request.json['startTime']
+        endTime = request.json['endTime']
+        car_idcar = request.json['car_idcar']
+
+        exists = s.query(rental).filter(and_(rental.startTime >=
+                                             datetime.strptime(startTime, "%Y-%m-%d %H:%M"),
+                                             rental.endTime <= datetime.strptime(endTime, "%Y-%m-%d %H:%M"),
+                                             rental.car_idcar == car_idcar)).first() is not None
+
+        if exists:
+            return jsonify({"State": "Reserved"})
+        else:
+            return jsonify({"State": "Available"})
 
     except Exception as e:
         return jsonify({"Error": "Invalid Request, please try again."})
 
+#Method_cars
+@app.route("/cars/getList", methods=["GET"])
+def getAllCars():
+    cars = s.query(car).all()
+    result_set = cars_schema.dump(cars)
+    return jsonify(result_set)
+
+if __name__=="__main__":
+    #serve(app)
+    app.run()
+
+
+#poetry run waitress-serve --listen=*:8000 main:app
+#http://localhost:8000/swagger
